Solve annoying scrolling and two scrollbars problem.
The problem initially introduced by setting the editor's height to auto
height. On windows, since the body is scrollable, there is a scollbar
for the div wrapping the editor (along with editor's own scrollbar).
This is not a problem until I have to set body's overflow to hidden to
prevent scrolling the underlying body when scrolling in preview and
shell output.

The two scrollbars also appear on the preview's div: to make the
position-fixed div scrollable on mobile, the div must set overflow-y to
scroll, and then two scrollbar apprear, one for iframe, one for its
scrollable wrapper.

The problem of scrolling underlying body is solved by setting body's
overflow to hidden (thus solved the problem that scroll on a
position-fixed div scrolls the underlying div). And set the editor's
body to 100% so the view only has the editor's scrollbar.

The problem of two scollbars is solved by using media query to set
overflow-y to scrollable only for mobile.

--- a/pollen-rock/css/editor.css
+++ b/pollen-rock/css/editor.css
@@ -1,12 +1,6 @@
 html, .CodeMirror {
     font-family: "Source Sans Pro", sans-serif;
-    font-size: 16px;
-}
-
-@media (min-width: 767px) {
-    html, .CodeMirror {
-        font-size: 18px;
-    }
+    font-size: 20px;
 }
 
 .noscroll {
@@ -15,7 +9,7 @@ html, .CodeMirror {
 
 /* Editor */
 .CodeMirror {
-    height: auto;
+    height: 90vh;
 }
 #editor-wrapper {
     height: 100%;
@@ -33,8 +27,6 @@ html, .CodeMirror {
     top: 0;
     height: 100%;
     z-index: 200;
-    -webkit-overflow-scrolling: touch;
-    overflow-y: scroll;
 }
 #preview-frame {
     width: 100%;
@@ -48,13 +40,16 @@ html, .CodeMirror {
     position: fixed;
     left: 0;
     bottom: 0;
-    height: 2rem;
+    height: 1.5rem;
     width: 100%;
     padding: 0 4px;
     z-index: 201;
+    font-size: 16px;
 }
 
 .small-btn {
+    cursor: pointer;
+    cursor: hand;
     padding: 0 4px;
     border-radius: 3px;
     border: 1px solid;
@@ -71,15 +66,18 @@ html, .CodeMirror {
 /* Shell */
 #shell-wrapper {
     position: fixed;
-    bottom: 2rem;
+    bottom: 1.5rem;
     left: 0;
     width: 100%;
     z-index: 201;
     margin-bottom: 0;
     padding-bottom: 0;
 }
+#shell-wrapper * {
+    font-size: 16px;
+}
 #shell-output-header {
-    height: 2rem;
+    height: 1.5rem;
 }
 #shell-output-wrapper {
     max-height: 50vh;
@@ -92,7 +90,7 @@ html, .CodeMirror {
 #shell-input {
     font-family: monospace;
     border: none;
-    height: 2rem;
+    height: 1.5rem;
     padding: 0;
     margin: 0;
     display: inline;
@@ -104,14 +102,10 @@ html, .CodeMirror {
 .shell-prompt {
     margin-right: 0.5rem;
 }
-#shell-clean {
-    cursor: pointer;
-    cursor: hand;
-}
 
 /* MODAL */
 #tab-header {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     border-bottom: 1px solid #EEE;
 }
 
@@ -131,8 +125,8 @@ html, .CodeMirror {
 
 #loader, #preview-loader {
     top: 0;
-    margin-top: 0;
-    padding-top: 0;
+    margin: 0;
+    padding: 0;
     z-index: 201;
 }
 
@@ -144,6 +138,10 @@ html, .CodeMirror {
 }
 .panel-btn-color {
     background-color: #424242;
+    border: none;
+}
+.panel-btn-color:hover {
+    background-color: #212121;
     border: none;
 }
 
@@ -166,4 +164,30 @@ html, .CodeMirror {
 
 .CodeMirror-empty {
   color: #CCC;
+}
+
+@media only screen and (max-width: 450px) {
+#preview-wrapper {
+    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
+}
+}
+
+@media only screen and (min-width: 600px) {
+html, .CodeMirror {
+    font-size: 21px;
+}
+
+}
+
+@media only screen and (min-width: 768px) {
+html, .CodeMirror {
+    font-size: 22px;
+}
+}
+
+@media only screen and (min-width: 992px) {
+html, .CodeMirror {
+    font-size: 23px;
+}
 }
